2009-08-07  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* tuner/Mono.Tuner/MoonlightA11yProcessor.cs: Don't use var.
	Remove debug spew.

2009-08-07  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/InjectSecurityAttributes.cs: Make an enum
	  and a method protected.

	* Mono.Tuner/MoonlightA11yProcessor.cs: Prevent
	  Type*Exceptions because of badly placed SC attrib on
	  methods.

	* Mono.Tuner/MoonlightA11yDescriptorGenerator.cs: Typo in
	  comment.

2009-07-02  Jb Evain  <jbevain@novell.com>

	* Makefile: fix cecil's location.

2009-06-16  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yProcessor.cs: GLibSharp uses
	  Activator.CreateInstance for *Adapter classes, so we need to
	  have an exception here for these ctors (to avoid
	  MissingMethodExceptions).

2009-06-10  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yDescriptorGenerator.cs: Cosmetic.

	* Mono.Tuner/MoonlightA11yAssemblyStep.cs: Typo.

2009-06-09  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner/MoonlightA11yDescriptorGenerator.cs: Cosmetic.

2009-06-09  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner.csproj:
	* Mono.Tuner.dll.sources: Update.

	* Mono.Tuner/MoonlightA11yProcessor.cs:
	* Mono.Tuner/MoonlightA11yAssemblyStep.cs: Typo.

	* Mono.Tuner/MoonlightA11yUsageInspectionStep.cs:
	* Mono.Tuner/MoonlightA11yDescriptorGenerator.cs: New steps
	  for prevention of API stripping.

2009-06-04  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner.dll.sources:
	* Mono.Tuner.csproj: Update.
	* Mono.Tuner/InjectSecurityAttributes.cs:
	* Mono.Tuner/MoonlightAssemblyStep.cs: Change some accessibility
	keywords, to be able to override and inherit.
	* Mono.Tuner/MoonlightA11yProcessor.cs:
	* Mono.Tuner/MoonlightA11yAssemblyStep.cs: New steps for a11y.

2009-06-02  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Mono.Tuner.csproj: Update.

	* Mono.Tuner/InjectSecurityAttributes.cs: Avoid NRE.
